Removed other cpp file which had duplicate main, must have just one.

--- a/CPPIntro/CPPIntro.vcxproj
+++ b/CPPIntro/CPPIntro.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CPPIntro.cpp" />
+    <ClCompile Include="M:\Downloads\Source_Files_C++\Source Files\02 Build functions to perform tasks\IntroductiontoCPP\IntroductiontoCPP\IntroductiontoCPP.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
